[package]
name = "zc_api_ffi"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

[lib]
name = "zc_api_ffi"
crate-type = ["rlib"]

[dependencies]
zcash-coldwallet = { path = "../zc" }
anyhow = "1.0.39"
tokio = { version = "0.2.13", features = ["macros", "blocking"] }
android_logger = "0.10.0"
log = "0.4.14"
bincode = "1.3.2"
serde = { version = "1.0.123", features = ["derive"] }
hex = "0.4.3"
base64 = "0.13.0"
lazy-static-include = "3.0.5"

[build-dependencies]
cbindgen = "0.18.0"
dart-bindgen = "0.1.7"
